# pr2_object_manipulation

./: .gitignore  CMakeLists.txt  README.md  rosdep.yaml  stack.xml
applications/pr2_interactive_manipulation/: .gitignore  CMakeLists.txt  manifest.xml  plugin_description.xml
applications/pr2_interactive_manipulation/cfg/: pickup_config.cfg  pickup_config.cfgc
applications/pr2_interactive_manipulation/config/: rviz_config.yaml
applications/pr2_interactive_manipulation/docs/: PickupConfig-usage.dox  PickupConfig.dox  PickupConfig.wikidoc
applications/pr2_interactive_manipulation/include/pr2_interactive_manipulation/: graspable_object_handler.h  interactive_manipulation_backend.h  interactive_manipulation_frontend_display.h  interactive_marker_node.h  point_head_camera_display.h  publish_click_view_controller.h
applications/pr2_interactive_manipulation/launch/: camera_throttle.launch  joy.launch  pr2_interactive_manipulation_desktop.launch  pr2_interactive_manipulation_robot.launch
applications/pr2_interactive_manipulation/scripts/: adjust_rviz_config.py
applications/pr2_interactive_manipulation/src/: awesome_camera_display.cpp  camera_focus_frontend.cpp  graspable_object_handler.cpp  init.cpp  interactive_manipulation_backend.cpp  interactive_manipulation_backend_node.cpp  interactive_manipulation_frontend_display.cpp  interactive_marker_node.cpp  point_head_camera_display.cpp
applications/pr2_interactive_manipulation_frontend/: CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
applications/pr2_interactive_manipulation_frontend/config/: pr2_interactive_manipulation.rviz  rviz_config.yaml
applications/pr2_interactive_manipulation_frontend/images/: splash.xcf
applications/pr2_interactive_manipulation_frontend/include/pr2_interactive_manipulation/: advanced_options_dialog.h  arm_locations.h  awesome_camera_display.h  camera_focus_frontend.h  interactive_manipulation_frontend.h  invisible_robot_display.h  point_head_view_controller.h  point_tools.h  publish_click_camera_display.h
applications/pr2_interactive_manipulation_frontend/launch/: big-menus.style  pr2_interactive_manipulation_desktop.launch  startRvizRemap.sh
applications/pr2_interactive_manipulation_frontend/scripts/: adjust_rviz_config.py
applications/pr2_interactive_manipulation_frontend/src/: advanced_options_dialog.cpp  advanced_options_dialog.ui  awesome_camera_display.cpp  camera_focus_frontend.cpp  grasp_caller.cpp  init.cpp  interactive_manipulation.ui  interactive_manipulation_frontend.cpp  interactive_manipulation_frontend_display.cpp  invisible_robot_display.cpp  point_head_camera_display.cpp  point_head_view_controller.cpp  point_tools.cpp  publish_click_camera_display.cpp  publish_click_view_controller.cpp
applications/pr2_interactive_object_detection/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
applications/pr2_interactive_object_detection/action/: UserCommand.action
applications/pr2_interactive_object_detection/include/pr2_interactive_object_detection/: interactive_object_detection_display.h  interactive_object_detection_frame.h  msg_saver.h  pr2_interactive_object_detection_backend.h
applications/pr2_interactive_object_detection/launch/: pr2_interactive_object_detection_robot.launch
applications/pr2_interactive_object_detection/msg/: .gitignore  GraspableObjectList.msg
applications/pr2_interactive_object_detection/src/: init.cpp  interactive_object_detection_display.cpp  main_frame.ui  pr2_interactive_object_detection_backend.cpp  recognition_translator.cpp
manipulation/pr2_gripper_sensor_action/: CMakeLists.txt  mainpage.dox  manifest.xml
manipulation/pr2_gripper_sensor_action/launch/: pr2_gripper_sensor_actions.launch
manipulation/pr2_gripper_sensor_action/scripts/: record_r_acc.sh
manipulation/pr2_gripper_sensor_action/src/: findContactActionTest.cpp  forceServoActionTest.cpp  grabActionTest.cpp  placeActionTest.cpp  positionActionTest.cpp  pr2_gripper_event_detector_action.cpp  pr2_gripper_findContact_action.cpp  pr2_gripper_forceServo_action.cpp  pr2_gripper_grab_action.cpp  pr2_gripper_release_action.cpp  pr2_gripper_sensor_action.cpp  pr2_gripper_slipServo_action.cpp  slipServoActionTest.cpp
perception/active_realtime_segmentation/: CMakeLists.txt  mainpage.dox  manifest.xml
perception/active_realtime_segmentation/doc/: Doxyfile.in  UseDoxygen.cmake
perception/active_realtime_segmentation/include/active_realtime_segmentation/: belief.h  cudabelieft.h  cudasegment.h  cudautils.h  fgbgsegment.h  largest.h  matrix3.h  timercpu.h
perception/active_realtime_segmentation/src/: belief.cpp  cudabelieft.cu  cudasegment.cu  dosegment.cpp  dosegment_node.cpp  fgbgsegment.cpp  largest.cpp
perception/active_realtime_segmentation/src/pyra/: tpimage.cpp  tpimageutil.cpp
perception/object_recognition_gui/: CMakeLists.txt  manifest.xml  plugin_description.xml
perception/object_recognition_gui/include/object_recognition_gui/: mouse_event_signalling_render_panel.h  object_recognition_display.h  object_recognition_rviz_ui.h
perception/object_recognition_gui/lib/: rviz_plugin.yaml
perception/object_recognition_gui/src/: init.cpp  mouse_event_signalling_render_panel.cpp  object_recognition_display.cpp  object_recognition_frame.ui  object_recognition_rviz_ui.cpp  ping_object_recognition_gui.cpp
perception/object_segmentation_gui/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  plugin_description.xml
perception/object_segmentation_gui/action/: ObjectSegmentationGui.action
perception/object_segmentation_gui/src/: init.cpp  main_frame.ui  object_segmentation_display.cpp  object_segmentation_rviz_ui.cpp  object_segmenter.cpp  ping_object_segmentation_gui.cpp  ping_object_segmentation_gui_rgbd_assembly.cpp  table_transform.cpp  tabletop_object_segmentation_gui_node.cpp  utils.cpp
perception/robot_self_filter_color/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
perception/robot_self_filter_color/src/: self_filter_color.cpp  self_mask_color.cpp  test_filter_color.cpp
(+323 files in other folders)
